@@ -26,4 +26,11 @@ setlocal
 cd /D %~dp0
 call "%~dp0set-pentaho-env.bat"
 
-"%_PENTAHO_JAVA%" -Xmx2048m -classpath "%~dp0plugins\pdi-pur-plugin\*;%~dp0lib\*;%~dp0classes" com.pentaho.di.purge.RepositoryCleanupUtil %*
+set JAVA_ADD_OPENS=
+set "JAVA_ADD_OPENS=%JAVA_ADD_OPENS% --add-opens=java.base/sun.net.www.protocol.jar=ALL-UNNAMED"
+set "JAVA_ADD_OPENS=%JAVA_ADD_OPENS% --add-opens=java.base/java.lang=ALL-UNNAMED"
+set "JAVA_ADD_OPENS=%JAVA_ADD_OPENS% --add-opens=java.base/java.net=ALL-UNNAMED"
+set "JAVA_ADD_OPENS=%JAVA_ADD_OPENS% --add-opens=java.base/sun.net.www.protocol.http=ALL-UNNAMED"
+set "JAVA_ADD_OPENS=%JAVA_ADD_OPENS% --add-opens=java.base/sun.net.www.protocol.https=ALL-UNNAMED"
+
+"%_PENTAHO_JAVA%" %JAVA_ADD_OPENS% -Xmx2048m -classpath "%~dp0plugins\pdi-pur-plugin\*;%~dp0lib\*;%~dp0classes" com.pentaho.di.purge.RepositoryCleanupUtil %*
